--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-hacker
+title: Welcome to Jeremytan206's RIA project homepage
+description: CashApp down below make sure to follow my OF page as well for all the goodies!
